unpackaged/main/default/objects/ETDI_Scheduled_Exam__c/ETDI_Scheduled_Exam__c.object-meta.xml
<CustomObject>
    <label>ETDI Scheduled Exam</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>ETDI Scheduled Exam Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ETDI Scheduled Exams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>