unpackaged/main/default/objects/ETDI_Scheduled_Exam__c/fields/Customer_Service_Exam_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Exam_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Service Exam ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>