unpackaged/main/default/objects/ETDI_Scheduled_Exam__c/fields/ETDI_Detail__c.field-meta.xml
<CustomField>
    <fullName>ETDI_Detail__c</fullName>
    <label>ETDI Detail</label>
    <referenceTo>ETDI_Detail__c</referenceTo>
    <relationshipLabel>ETDI Scheduled Exams</relationshipLabel>
    <relationshipName>ETDI_Scheduled_Exams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>