unpackaged/main/default/objects/ETDI_Scheduled_Exam__c/fields/Exam_Date__c.field-meta.xml
<CustomField>
    <fullName>Exam_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exam Date</label>
    <type>DateTime</type>
</CustomField>