unpackaged/main/default/objects/ETDI_Scheduled_Exam__c/fields/Exam_Name__c.field-meta.xml
<CustomField>
    <fullName>Exam_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exam Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>