unpackaged/main/default/objects/ETDI_Scheduled_Exam__c/fields/Exam_Result__c.field-meta.xml
<CustomField>
    <fullName>Exam_Result__c</fullName>
    <label>Exam Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>